# LivePortrait

./: .gitignore  build_msda.py  pyproject.toml  setup.py
src/: __init__.py  gradio_pipeline.py
src/config/: __init__.py
src/modules/: __init__.py
src/utils/: __init__.py
