[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liveportrait"
version = "1.0.0"
description = "Efficient Portrait Animation with Stitching and Retargeting Control"
readme = "readme.md"
license = {file = "LICENSE"}
authors = [
    {name = "Jianzhu Guo"},
    {name = "Dingyun Zhang"},
    {name = "Xiaoqiang Liu"},
    {name = "Zhizhou Zhong"},
    {name = "Yuan Zhang"},
    {name = "Pengfei Wan"},
    {name = "Di Zhang"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy==1.26.4",
    "pyyaml==6.0.1",
    "opencv-python==4.10.0.84",
    "scipy==1.13.1",
    "imageio==2.34.2",
    "lmdb==1.4.1",
    "tqdm==4.66.4",
    "rich==13.7.1",
    "ffmpeg-python==0.2.0",
    "onnx==1.16.1",
    "onnxruntime-gpu==1.18.0",
    "scikit-image==0.24.0",
    "albumentations==1.4.10",
    "matplotlib==3.9.0",
    "imageio-ffmpeg==0.5.1",
    "tyro==0.8.5",
    "gradio==5.1.0",
    "pykalman==0.9.7",
    "pillow>=10.2.0",
    "transformers==4.38.0",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime==1.18.0",
]

[project.urls]
Homepage = "https://liveportrait.github.io"
Repository = "https://github.com/KwaiVGI/LivePortrait"
Documentation = "https://github.com/KwaiVGI/LivePortrait"

[project.scripts]
liveportrait = "liveportrait.inference:main"
liveportrait-animals = "liveportrait.inference_animals:main"

[tool.setuptools]
packages = [
    "liveportrait",
    "liveportrait.modules",
    "liveportrait.utils",
    "liveportrait.utils.dependencies",
    "liveportrait.utils.dependencies.insightface",
    "liveportrait.utils.dependencies.insightface.app",
    "liveportrait.utils.dependencies.insightface.data",
    "liveportrait.utils.dependencies.insightface.data.images",
    "liveportrait.utils.dependencies.insightface.data.objects",
    "liveportrait.utils.dependencies.insightface.model_zoo",
    "liveportrait.utils.dependencies.insightface.utils",
    "liveportrait.utils.dependencies.XPose",
    "liveportrait.utils.dependencies.XPose.config_model",
    "liveportrait.utils.dependencies.XPose.models",
    "liveportrait.utils.dependencies.XPose.models.UniPose",
    "liveportrait.utils.dependencies.XPose.models.UniPose.ops",
    "liveportrait.utils.dependencies.XPose.models.UniPose.ops.functions",
    "liveportrait.utils.dependencies.XPose.models.UniPose.ops.modules",
    "liveportrait.utils.dependencies.XPose.models.UniPose.ops.src",
    "liveportrait.utils.dependencies.XPose.models.UniPose.ops.src.cpu",
    "liveportrait.utils.dependencies.XPose.models.UniPose.ops.src.cuda",
    "liveportrait.utils.dependencies.XPose.util",
    "liveportrait.utils.resources",
    "liveportrait.config"
]

[tool.setuptools.package-dir]
liveportrait = "src"
